--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.css" />
+  <title>Document</title>
 </head>
 
 <body>
-    <header class="header">
-        <h1 class="header__title">Color Randomizer</h1>
-        <button class="header__btn">get colors!</button>
-    </header>
-    <main class="color-board"></main>
+  <header class="header">
+    <h1 class="header__title">Color Randomizer</h1>
+    <button class="header__btn">get colors!</button>
+  </header>
+  <main class="color-board"></main>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
